@@ -13,6 +13,7 @@ Bug fixes:
 - PR#4994: ocaml-mode doesn't work with xemacs21
 * PR#5119: camlp4 now raises a specific exception when 'DELETE_RULE' fails,
   rather than raising 'Not_found'
+- PR#5212: Improve ocamlbuild error messages of _tags parser
 - PR#5327: (Windows) Unix.select blocks if same socket listed in first and
   third arguments
 - PR#5343: ocaml -rectypes is unsound wrt module subtyping (was still unsound)
